Add module exports to run.sh